--- a/coconut-crab-co/package.json
+++ b/coconut-crab-co/package.json
@@ -13,8 +13,11 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.5.4",
+    "@nuxtjs/google-analytics": "^2.2.0",
     "nuxt": "^2.0.0",
-    "nuxt-buefy": "^0.3.10"
+    "nuxt-buefy": "^0.3.10",
+    "vue-youtube": "^1.3.5"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.1",
