--- a/coconut-crab-co/package.json
+++ b/coconut-crab-co/package.json
@@ -17,6 +17,7 @@
     "@nuxtjs/google-analytics": "^2.2.0",
     "nuxt": "^2.0.0",
     "nuxt-buefy": "^0.3.10",
+    "particles.js": "^2.0.0",
     "vue-youtube": "^1.3.5"
   },
   "devDependencies": {
